# stock-scraper-service

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: bump-version.yml  check-commit-message.yml  github-actions-ci.yml  github-actions-linting.yml
e2e_tests/: test_stock_scraper.py  test_url_scraper.py
stock_scraper_service/: config.py  url_info.py  url_parser.py
tests/: test_stock_scraper.py  test_url_parser.py
