[tool.poetry]
name = "stock_scraper_service"
version = "0.0.1"
description = "Scraper service to get stock information from external sourcee"
authors = ["k4tzi", "jibachi"]
readme = "README.md"
packages = [{include = "stock_scraper_service"}]

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
