[tool.poetry]
name = "stock_scraper_service"
version = "0.1.0"
description = "Scraper service to get stock information from external sourcee"
authors = ["k4tzi", "jibachi"]
readme = "README.md"
packages = [{include = "stock_scraper_service"}]

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.282"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true
annotated_tag = true
